Further work on task 4

--- a/4_webapplikasjon/package.json
+++ b/4_webapplikasjon/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "serve": "vite -c vite.config.js src/"
+    "start": "vite -c vite.config.js src/"
   },
   "license": "ISC",
   "dependencies": {
