--- a/4_webapplikasjon/Dockerfile.fasit1
+++ b/4_webapplikasjon/Dockerfile.fasit1
@@ -1,10 +1,10 @@
-FROM node:16
+FROM node:18-alpine
 
 WORKDIR /app
 COPY . .
 
 RUN ["npm", "install"]
-CMD ["npm", "run", "serve"]
+CMD ["npm", "start"]
 # Base node image
 
 # Legge inn dependencies man trenger fra distro
