Add missing dockerfiles

--- a/7_andre_oppgaver/workshop-docker-compose/server/package.json
+++ b/7_andre_oppgaver/workshop-docker-compose/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon --inspect src/app.js"
   },
   "license": "ISC",
   "dependencies": {
