--- a/7_andre_oppgaver/workshop-docker-compose/docker-compose.yml
+++ b/7_andre_oppgaver/workshop-docker-compose/docker-compose.yml
@@ -6,7 +6,9 @@ volumes:
 
 services:
   client:
-    build: client
+    build:
+      context: client
+      target: dev
     environment:
       - PORT=3000
       - VITE_SERVER_HOST=http://localhost:3001
@@ -27,6 +29,7 @@ services:
       - DATABASE_PASSWORD=postgres
     ports:
       - "3001:3001"
+      - "9229:9229"
     volumes:
       - ./server/src:/app/src
   database:
